# Ditto-6.S984

./: .gitignore  install.sh
applications/memcached-1.6.24/: Makefile  Makefile.in  assoc.c.gcov  assoc.gcda  assoc.gcno  authfile.c.gcov  authfile.gcda  authfile.gcno  base64.c.gcov  base64.gcda  base64.gcno  bipbuffer.c.gcov  bipbuffer.gcda  bipbuffer.gcno  byteswap.h.gcov  cache.c.gcov  cache.gcda  cache.gcno  config.h  (+85 more)
backbone_analysis/: profiling_configs.json  run_profiling.py  tmp_stap.json
synthetic_social_network/: CMakeLists.txt  Dockerfile  README.md  docker-compose-swarm.yml  docker-compose-temp.yml  docker-compose.yml
synthetic_social_network/config/: jaeger-config.yml  mongodb.html  paths copy.json  paths.json  rpcs.json  services.json
synthetic_social_network/gen-cpp/: auto_microservices_constants.cpp  service_0.cpp  service_0.h  service_0_server.skeleton.cpp  service_1.cpp  service_1.h  service_10.h  service_10_server.skeleton.cpp  service_11.h  service_12.cpp  service_14.h  service_15.cpp  service_16.cpp  service_16.h  service_16_server.skeleton.cpp  service_17.cpp  service_17_server.skeleton.cpp  service_18.cpp  service_18.h  service_18_server.skeleton.cpp  service_19.cpp  service_1_server.skeleton.cpp  service_2.cpp  service_20.h  service_21.cpp  service_21.h  service_21_server.skeleton.cpp  service_3_server.skeleton.cpp  service_4.cpp  service_4_server.skeleton.cpp  service_6_server.skeleton.cpp  service_7.cpp  service_7_server.skeleton.cpp  service_8.cpp  service_8.h  service_9.h
synthetic_social_network/gen-cpp-orig/: auto_microservices_constants.h  auto_microservices_types.cpp  auto_microservices_types.h  service_10.cpp  service_11.cpp  service_11_server.skeleton.cpp  service_12.h  service_12_server.skeleton.cpp  service_13.cpp  service_13.h  service_13_server.skeleton.cpp  service_14.cpp  service_14_server.skeleton.cpp  service_15.h  service_15_server.skeleton.cpp  service_17.cpp  service_17.h  service_19.h  service_19_server.skeleton.cpp  service_2.h  service_20.cpp  service_20_server.skeleton.cpp  service_2_server.skeleton.cpp  service_3.cpp  service_3.h  service_4.h  service_5.cpp  service_5.h  service_5_server.skeleton.cpp  service_6.cpp  service_6.h  service_7.h  service_8_server.skeleton.cpp  service_9.cpp  service_9_server.skeleton.cpp
synthetic_social_network/gen-lua/: auto_microservices_constants.lua  auto_microservices_service_0.lua  auto_microservices_service_1.lua  auto_microservices_service_10.lua  auto_microservices_service_11.lua  auto_microservices_service_12.lua  auto_microservices_service_13.lua  auto_microservices_service_14.lua  auto_microservices_service_15.lua  auto_microservices_service_16.lua  auto_microservices_service_17.lua  auto_microservices_service_18.lua  auto_microservices_service_19.lua  auto_microservices_service_2.lua  auto_microservices_service_20.lua  auto_microservices_service_3.lua  auto_microservices_service_4.lua  auto_microservices_service_5.lua  auto_microservices_service_6.lua  auto_microservices_service_7.lua  auto_microservices_service_8.lua  auto_microservices_service_9.lua  auto_microservices_ttypes.lua
synthetic_social_network/nginx-web-server/: jaeger-config.json
synthetic_social_network/nginx-web-server/conf/: nginx.conf
synthetic_social_network/nginx-web-server/lua-scripts/api/service_0/: rpc_0.lua
synthetic_social_network/nginx-web-server/wo_tracing/conf/: nginx.conf
synthetic_social_network/nginx-web-server/wo_tracing/lua-scripts/api/service_0/: rpc_0.lua
synthetic_social_network/output/: example.txt
synthetic_social_network/scripts/: README.md  auto.py  auto_microservices.thrift  batched_test.py  docker-compose_gen.py  docker-compose_temp.yml  extract.py  lua_rewrite.py  src_files_gen.py  template_thrift.cpp  template_thrift_pure.cpp  template_thrift_with_process.cpp  thrift_gen.py
synthetic_social_network/src/: CMakeLists.txt  CMakeLists_assembly.txt  ClientPool.h  GenericClient.h  MemcachedTCPClient.h  MongoTCPClient.h  RedisTCPClient.h  TCPClientPool.h  ThriftClient.h  logger.h  tracing.h
synthetic_social_network/src/service_0/: CMakeLists.txt  assembly.cpp  service_0.cpp
synthetic_social_network/src/service_1/: CMakeLists.txt  assembly.cpp  service_1.cpp  utils.h
synthetic_social_network/src/service_10/: CMakeLists.txt  service_10.cpp
synthetic_social_network/src/service_11/: CMakeLists.txt  assembly.cpp  service_11.cpp
synthetic_social_network/src/service_12/: CMakeLists.txt
synthetic_social_network/src/service_13/: CMakeLists.txt  assembly.cpp  service_13.cpp  utils.h
synthetic_social_network/src/service_14/: CMakeLists.txt  assembly.cpp
synthetic_social_network/src/service_15/: CMakeLists.txt  assembly.cpp
synthetic_social_network/src/service_16/: CMakeLists.txt  service_16.cpp
synthetic_social_network/src/service_17/: CMakeLists.txt  assembly.cpp  service_17.cpp
synthetic_social_network/src/service_18/: CMakeLists.txt  assembly.cpp  service_18.cpp
synthetic_social_network/src/service_2/: CMakeLists.txt  service_2.cpp
synthetic_social_network/src/service_20/: CMakeLists.txt
synthetic_social_network/src/service_21/: CMakeLists.txt  assembly.cpp  service_2.cpp
synthetic_social_network/src/service_3/: CMakeLists.txt
synthetic_social_network/src/service_4/: CMakeLists.txt  service_4.cpp
synthetic_social_network/src/service_5/: CMakeLists.txt
synthetic_social_network/src/service_7/: CMakeLists.txt  service_7.cpp
synthetic_social_network/src/service_9/: CMakeLists.txt  assembly.cpp  service_9.cpp
synthetic_social_network/src/tcp_server/: assembly.cpp  utils.cpp  utils.h  webserver.cpp  webserver.h
synthetic_social_network/src/tcp_server copy/: config.cpp  config.h  main.cpp  utils.cpp  utils.h  webserver.cpp  webserver.h
synthetic_social_network/src/tcp_server copy/connection/: tcp_conn.cpp  tcp_conn.h
synthetic_social_network/src/tcp_server copy/threadpool/: threadpool.h
synthetic_social_network/src/tcp_server/connection/: tcp_conn.cpp  tcp_conn.h
synthetic_social_network/src/tcp_server/threadpool/: threadpool.h  worker_thread.h
(+20 files in other folders)
