add_subdirectory(service_0)
add_subdirectory(service_1)
add_subdirectory(service_10)
add_subdirectory(service_11)
add_subdirectory(service_12)
add_subdirectory(service_13)
add_subdirectory(service_14)
add_subdirectory(service_15)
add_subdirectory(service_16)
add_subdirectory(service_17)
add_subdirectory(service_18)
add_subdirectory(service_2)
add_subdirectory(service_20)
add_subdirectory(service_3)
add_subdirectory(service_4)
add_subdirectory(service_5)
add_subdirectory(service_7)
add_subdirectory(service_9)
